Solve layout bug where buttons next to each other wouldn't be rounded
Also added a temporary "create" button to work it through with Adam.

--- a/bloom_nofos/bloom_nofos/static/shared.css
+++ b/bloom_nofos/bloom_nofos/static/shared.css
@@ -128,13 +128,17 @@
     padding: 0.75rem 1.05rem;
   }
 
-  .usa-button-group .usa-button-group__item:first-of-type button {
+  .usa-button-group.usa-button-group--segmented
+    .usa-button-group__item:first-of-type
+    button {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     margin-right: -1px;
   }
 
-  .usa-button-group .usa-button-group__item:last-of-type button {
+  .usa-button-group.usa-button-group--segmented
+    .usa-button-group__item:last-of-type
+    button {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     margin-right: 0;
